--- a/Asphodel_Unity.csproj
+++ b/Asphodel_Unity.csproj
@@ -42,7 +42,6 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Old Asphodel\Related Scripts\Plant Growth.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\CombineChildren.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\MeshCombineUtility.cs" />
      <None Include="Assets\Shaders\Particle Add (Overlay).shader" />
@@ -61,6 +60,7 @@
      <None Include="Assets\Scripts\2D\Character Controls\PlatformerPushBodies.js" />
      <None Include="Assets\Scripts\2D\Moving Platform\MovingPlatformEffects.js" />
      <None Include="Assets\Scripts\2D\Moving Platform\PlatformMover.js" />
+     <None Include="Assets\Scripts\2D\Plants\MushroomBounce.js" />
      <None Include="Assets\Scripts\2D\Plants\Plant Growth.js" />
      <None Include="Assets\Scripts\2D\Plants\Projectile Plant.js" />
      <None Include="Assets\Scripts\2D\Spaceship\Spaceship.js" />
