--- a/Asphodel_Unity.csproj
+++ b/Asphodel_Unity.csproj
@@ -51,6 +51,7 @@
      <None Include="Assets\Scripts\2D\LevelAttributes.js" />
      <None Include="Assets\Scripts\2D\Orb.js" />
      <None Include="Assets\Scripts\2D\PlatformTarget.js" />
+     <None Include="Assets\Scripts\2D\Respawn.js" />
      <None Include="Assets\Scripts\2D\SpawnPoint.js" />
      <None Include="Assets\Scripts\2D\Camera\CameraFocus.js" />
      <None Include="Assets\Scripts\2D\Camera\CameraScrolling.js" />
@@ -60,9 +61,11 @@
      <None Include="Assets\Scripts\2D\Character Controls\PlatformerPushBodies.js" />
      <None Include="Assets\Scripts\2D\Moving Platform\MovingPlatformEffects.js" />
      <None Include="Assets\Scripts\2D\Moving Platform\PlatformMover.js" />
+     <None Include="Assets\Scripts\2D\Plants\FertileSoil.js" />
      <None Include="Assets\Scripts\2D\Plants\MushroomBounce.js" />
      <None Include="Assets\Scripts\2D\Plants\Plant Growth.js" />
      <None Include="Assets\Scripts\2D\Plants\Projectile Plant.js" />
+     <None Include="Assets\Scripts\2D\Plants\SmallFlower.js" />
      <None Include="Assets\Scripts\2D\Spaceship\Spaceship.js" />
      <None Include="Assets\Scripts\Effects\CollisionParticleEffect.js" />
      <None Include="Assets\Scripts\Effects\CollisionSoundEffect.js" />
